# metalvr-bridge

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP_GUIDE.md  SUPERPOWERS.md  vulkan_icd.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: game-compatibility-report.yml  mac-runtime-smoke-test.yml
.github/workflows/: build.yml  codeql.yml
docs/: AI_HANDOFF.md  EXECUTION_PLAN.md  GAME_COMPATIBILITY_CATALOG.json  GAME_COMPATIBILITY_CATALOG.md  MAC_RUNTIME_SMOKE_TEST.md  MILESTONES.md  PHASE4_CROSSOVER_COMPETITOR_ROADMAP.md  PROJECT_STATUS.json  REPO_MAP.md
host-tests/: CMakeLists.txt
launcher/: BridgeViewModel.swift  CompatibilityCatalog.swift  ContentView.swift  MetalVRBridgeApp.swift  ProjectStatus.swift  README.md  RuntimeBundleArtifactPreview.swift  RuntimeBundleManifest.swift  RuntimeGuidedActionPlan.swift  RuntimeLaunchPlan.swift  setup.sh
profiles/: README.md
profiles/defaults/: global-defaults.mvrvb-profile
profiles/games/: overwatch-2.mvrvb-profile
profiles/prefix-presets/: battlenet-shooter.mvrvb-prefix-preset  competitive-shooter.mvrvb-prefix-preset  general-game.mvrvb-prefix-preset
profiles/templates/: competitive-shooter-dxvk.mvrvb-profile
scripts/: export_ai_handoff_bundle.ps1  export_profile_catalog.ps1  export_runtime_bundle.ps1  export_runtime_plan.ps1  mac_runtime_smoke_test.sh  run_host_checks.ps1  run_profile_lint.ps1  update_ai_handoff_doc.ps1  update_profile_catalog_doc.ps1  update_profile_catalog_json.ps1  update_project_status_json.ps1
shaders/: composite.metal  distortion.metal  geometry_emu.metal  timewarp.metal
src/common/: CMakeLists.txt  compatibility_catalog.cpp  compatibility_catalog.h  compatibility_profile.cpp  compatibility_profile.h  logging.cpp  logging.h  memory_pool.h  prefix_preset.cpp  prefix_preset.h  profile_lint.cpp  profile_lint.h  runtime_launch_command.cpp  runtime_launch_command.h  runtime_launch_plan.cpp  runtime_launch_plan.h  runtime_setup_command.cpp  runtime_setup_command.h  threading.cpp  threading.h
src/shader_translator/: CMakeLists.txt
src/shader_translator/cache/: shader_cache.h  shader_cache.mm
src/shader_translator/geometry_emu/: geometry_emu.h  geometry_emu.mm
src/shader_translator/msl_emitter/: spirv_to_msl.cpp  spirv_to_msl.h
src/shader_translator/spirv/: spirv_parser.cpp  spirv_parser.h
src/vr_runtime/: CMakeLists.txt
src/vr_runtime/hmd/quest/: quest_backend.h  quest_backend.mm
src/vr_runtime/hmd/vision_pro/: vision_pro_backend.h  vision_pro_backend.mm  vision_pro_tracking.h  vision_pro_tracking.mm
src/vr_runtime/openvr_shim/: openvr_shim.h  openvr_shim.mm  vr_chaperone.h  vr_chaperone.mm  vr_compositor.h  vr_compositor.mm  vr_input.h  vr_input.mm  vr_overlay.h  vr_overlay.mm  vr_rendermodels.h  vr_rendermodels.mm  vr_settings.h  vr_settings.mm  vr_system.h  vr_system.mm
src/vr_runtime/timewarp/: async_timewarp.h  async_timewarp.mm
src/vulkan_layer/: CMakeLists.txt
src/vulkan_layer/commands/: transfer_utils.cpp  transfer_utils.h  vk_commands.h  vk_commands.mm
src/vulkan_layer/descriptors/: vk_descriptors.h  vk_descriptors.mm
src/vulkan_layer/device/: vk_device.h  vk_device.mm
src/vulkan_layer/format_table/: format_table.cpp  format_table.h
src/vulkan_layer/icd/: exported_symbols.txt  vulkan_icd.cpp  vulkan_icd.h
src/vulkan_layer/memory/: vk_memory.h  vk_memory.mm
src/vulkan_layer/pipeline/: vk_pipeline.h  vk_pipeline.mm
src/vulkan_layer/resources/: vk_resources.h  vk_resources.mm
src/vulkan_layer/swapchain/: vk_swapchain.h  vk_swapchain.mm
src/vulkan_layer/sync/: vk_sync.h  vk_sync.mm
tests/: CMakeLists.txt
tests/unit/: compatibility_catalog_tests.cpp  compatibility_profile_tests.cpp  format_table_tests.cpp  icd_contract_tests.cpp  prefix_preset_tests.cpp  profile_lint_tests.cpp  runtime_launch_command_tests.cpp  runtime_launch_plan_tests.cpp  runtime_setup_command_tests.cpp  spirv_parser_tests.cpp  spirv_to_msl_tests.cpp  transfer_utils_tests.cpp
tools/: CMakeLists.txt  profile_catalog.cpp  profile_lint.cpp  runtime_bundle_builder.cpp  runtime_plan_preview.cpp  verify_profile_catalog_output.cmake  verify_runtime_bundle_output.cmake  verify_runtime_plan_output.cmake
